src/test/deca/context/valid/cast_int_to_float.deca
// Contextual test, cast an int cast into a float

{
    int x = 5;
    float f = (float) (x);
}