src/test/deca/context/invalid/or_expr_with_int.deca
// Test context, OR with a number operand, syntaxically correct 
// but not contextually

{
    if (x || 15 ){
        a = 5;
    }
}